# nf-ctm-lattice-pure

./: .gitignore  README.md  pyproject.toml
docs/: NF_CTM_LATTICE_AGENT_AUDIT_2026-05-31.md  NF_CTM_LATTICE_AUDIT_2026-05-30.md  NF_CTM_LATTICE_NO_SANDWICH_REPAIR_PLAN_2026-05-28.md  NF_CTM_LATTICE_V4_PURE_ALGORITHM_2026-05-27.md  NF_CTM_LATTICE_V6_EOMT_RESULTS_2026-05-29.md  NF_CTM_ORDERFLOW_V5_ALGORITHM_2026-05-28.md  NF_CTM_PROGRESS_2026-05-31_CONTINUE.md
model_security_gate/detox/nf_ctm_lattice/: __init__.py  multiscale_field.py  neuron_field.py  objective.py  pipeline.py  schema.py  split_protocol.py  yolo_hook.py  yolo_io.py
scripts/: _video_compare_nf_ctm_lattice_2026-05-30.py  build_semantic_vest_ab_strict_detox_dataset.py  eval_semantic_vest_ab_protocol.py  nf_ctm_lattice_synthetic_smoke_2026-05-27.py  nf_ctm_lattice_yolo_multiscale_v2_coupled_2026-05-28.py  nf_ctm_lattice_yolo_neck_v4_pure_2026-05-27.py
tests/: test_nf_ctm_lattice.py
