[project]
name = "nf-ctm-lattice-pure"
version = "0.1.0"
description = "Pure NF-CTM lattice research for object-detection backdoor detox via recurrent synchronization fields, CTM gauge fixing, basin separation, and residual-profile dynamics."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "opencv-python",
  "torch",
  "ultralytics",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
